--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint:fix": "eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.8",
+    "keen-slider": "^6.8.6",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
