--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "keen-slider": "^6.8.6",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^17.1.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
