--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "axios": "^1.7.7",
     "keen-slider": "^6.8.6",
     "next": "14.2.14",
     "react": "^18",
